Add login form and media queries

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                <img src="assets/cart-img-2.png" alt="">
                <div class="content">
                    <h3>onion</h3>
-                   <span class="price">$5.99/-</span>
+                   <span class="price">$4.99/-</span>
                    <span class="quantity">qty: 2</span>
                </div>
            </div>
@@ -63,8 +63,19 @@
                    <span class="quantity">qty: 1</span>
                </div>
            </div>
-           <div class="total">total</div>
+           <div class="total">total : $19.69/-</div>
+           <a href="#" class="btn">checkout</a>
        </div>
+
+       <!--Login form-->
+       <form action="" class="login__form">
+           <h3>login now</h3>
+           <input type="email" placeholder="Enter email" class="box">
+           <input type="password" placeholder="Enter password" class="box">
+           <p>forgot password?<a href="#">click here</a></p>
+           <p>don't have an account?<a href="#">create acccount</a></p>
+           <input type="submit" value="Login Now" placeholder="login" class="btn">
+       </form>
    </header>
     <!--End of Header Section-->
     <!--javascript link-->
