--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
    <!--Header Section-->
    <header class="header">
-       <a href="#" class="logo"><i class="fas fa-shopping-basket"></i>delight</a>
+       <a href="#" class="logo"><i class="fas fa-shopping-basket"></i>delight food</a>
        <nav class="navbar">
            <a href="#home">Home</a>
            <a href="#features">Features</a>
@@ -78,6 +78,16 @@
        </form>
    </header>
     <!--End of Header Section-->
+    <section id="home" class="home">
+        <div class="content">
+            <h3>fresh <span>organic</span> products for your</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.</p>
+            <a href="#" class="btn">shop now</a>
+        </div>
+    </section>
+    <!--Home Section-->
+    <!--End of home Section-->
+
     <!--javascript link-->
     <script src="index.js"></script>
 </body>
